@@ -1,3 +1,8 @@
+2017-08-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/pict.c (ReadPICTImage): Fix memory leaks in error return
+	path.  ImageMagick CVE CVE-2017-8353.  Patch by Petr Gajdos.
+
 2017-07-10  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>
 
 	* tests/rwblob.c and rwfile.c: Write the reason for FAIL in
